k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: ecomacr123.azurecr.io/ecom-backend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 4000
