k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  type: LoadBalancer


  selector:
    app: backend

  ports:
    - port: 80
      targetPort: 4000
