k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: ecom.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80

---

# apiVersion: networking.k8s.io/v1
# kind: Ingress

# metadata:
#   name: backend-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2

# spec:
#   ingressClassName: nginx

#   rules:
#     - host: ecom.local

#       http:
#         paths:
#           - path: /api(/|$)(.*)
#             pathType: ImplementationSpecific

#             backend:
#               service:
#                 name: backend-service
#                 port:
#                   number: 4000
